infra/prometheus/ingressroute.yaml
# Grafana HTTPS IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.local`)
      kind: Rule
      services:
        # fullnameOverride: grafana → service is just "grafana"
        - name: grafana
          port: 80
  tls:
    secretName: grafana-tls-secret
---
# Prometheus HTTPS IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.local`)
      kind: Rule
      services:
        - name: kps-kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: prometheus-tls-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.local`)
      kind: Rule
      services:
        - name: kps-kube-prometheus-stack-alertmanager
          port: 9093
  tls:
    secretName: alertmanager-tls-secret
